--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -27,3 +27,36 @@ jobs:
           context: .
           tags: ${{secrets.ACR_NAME}}/contoso-website:latest
           push: true
+  
+deploy:
+    runs-on: ubuntu-20.04
+    needs: build_push_image # Will wait for the execution of the previous job  
+
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Install Helm
+        uses: Azure/setup-helm@v3
+        with:
+          version: v3.3.1
+          
+      - name: Get AKS Credentials
+        uses: Azure/aks-set-context@v3
+        with:
+          resource-group: mslearn-gh-pipelines-1045
+          cluster-name: contoso-video
+          subscription: 6be09ae0-3f8d-4739-8812-6cef10ab0a76
+          admin: true
+          
+      - name: Run Helm Deploy
+        run: |
+          helm upgrade \
+            --install \
+            --create-namespace \
+            --atomic \
+            --wait \
+            --namespace staging \
+            contoso-website \
+            ./kubernetes/contoso-website \
+            --set image.repository=${{ secrets.ACR_NAME }} \
+            --set dns.name=${{ secrets.DNS_NAME }}
