--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -41,10 +41,12 @@ jobs:
           version: v3.3.1
           
       - name: Get AKS Credentials
-        uses: Azure/aks-set-context@v2.0
+        uses: Azure/aks-set-context@v3
         with:
           resource-group: mslearn-gh-pipelines-1045
-          cluster-name: contoso-video         
+          cluster-name: contoso-video
+          subscription: 6be09ae0-3f8d-4739-8812-6cef10ab0a76
+          admin: true
           
       - name: Run Helm Deploy
         run: |
