--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -39,7 +39,14 @@ jobs:
         uses: Azure/setup-helm@v3
         with:
           version: v3.3.1
-          
+      
+      - name: Azurelogin
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      
       - name: Get AKS Credentials
         uses: Azure/aks-set-context@v3
         with:
