--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -46,6 +46,7 @@ jobs:
           resource-group: mslearn-gh-pipelines-1045
           cluster-name: contoso-video
           subscription: 6be09ae0-3f8d-4739-8812-6cef10ab0a76
+          creds: ${{ secrets.AZURE_DEVOPS_EXT_PAT }}
           admin: true
           
       - name: Run Helm Deploy
