--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -46,7 +46,8 @@ jobs:
           resource-group: mslearn-gh-pipelines-1045
           cluster-name: contoso-video
           subscription: 6be09ae0-3f8d-4739-8812-6cef10ab0a76
-          admin: true
+          admin: false
+          use-kubelogin: true
           
       - name: Run Helm Deploy
         run: |
