--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -47,10 +47,14 @@ jobs:
           rm -f kubelogin-linux-amd64.zip
           kubelogin --version
       
+      - name: |
+          az pipelines build list
+        env:
+          AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
+      
       - name: Get AKS Credentials
         uses: Azure/aks-set-context@v3
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }} 
           resource-group: mslearn-gh-pipelines-1045
           cluster-name: contoso-video
           admin: false
