--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -46,15 +46,11 @@ jobs:
           sudo unzip -j kubelogin-linux-amd64.zip -d /usr/local/bin
           rm -f kubelogin-linux-amd64.zip
           kubelogin --version
-      
-      - name: Login do Azure
-        run: |
-          az pipelines build list
-          AZURE_DEVOPS_EXT_PAT: $(System.AccessToken)
-      
+       
       - name: Get AKS Credentials
         uses: Azure/aks-set-context@v3
         with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
           resource-group: mslearn-gh-pipelines-1045
           cluster-name: contoso-video
           admin: false
